Optimización de la galería: lazy loading de imágenes y limpieza de JS

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
       </div>
       <div class="imagenes-nosotros">
         <div class="imagen1">
-          <img data-src="assets/img/comida1.webp" alt="mujer comiendo pizza" />
+          <img src="assets/img/comida1.webp" alt="mujer comiendo pizza" />
         </div>
         <div class="imagenes2">
           <img
-            data-src="assets/img/comida2.webp"
+            src="assets/img/comida2.webp"
             alt="mujeres comiendo pizza"
           />
-          <img data-src="assets/img/comida3.webp" alt="plato con pasta" />
+          <img src="assets/img/comida3.webp" alt="plato con pasta" />
         </div>
       </div>
     </div>
@@ -97,7 +97,7 @@
       <h2 class="texto-platillos">Te ofrecemos</h2>
       <div class="platillossf">
         <div class="platillosf" data-platillo="#">
-          <img data-src="assets/img/entrada.webp" alt="entrada" />
+          <img src="assets/img/entrada.webp" alt="entrada" />
           <h2>Entradas</h2>
           <p>Contamos con las mejores entradas.</p>
           <div class="precio">
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="platillosf" data-platillo="#">
-          <img data-src="assets/img/principal.webp" alt="principal" />
+          <img src="assets/img/principal.webp" alt="principal" />
           <h2>Platos principales</h2>
           <p>Los mejores platos con guarniciones.</p>
           <div class="precio">
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="platillosf" data-platillo="#">
-          <img data-src="assets/img/pb.webp" alt="pb" />
+          <img src="assets/img/pb.webp" alt="pb" />
           <h2>Bebidas-Postres</h2>
           <p>Variedad en postres y bebidas</p>
           <div class="precio">
@@ -149,7 +149,7 @@
         </div>
         <div class="imagen-chef">
           <img
-            data-src="./assets/img/visitanos.webp"
+            src="./assets/img/visitanos.webp"
             alt="fotografia del chef"
           />
         </div>
@@ -186,11 +186,11 @@
       </div>
       <div class="imagenes-nosotros">
         <div class="imagen1">
-          <img data-src="assets/img/n1.webp" alt="mujer comiendo pizza" />
+          <img src="assets/img/n1.webp" alt="mujer comiendo pizza" />
         </div>
         <div class="imagenes2">
-          <img data-src="assets/img/n2.webp" alt="mujeres comiendo pizza" />
-          <img data-src="assets/img/n3.webp" alt="plato con pasta" />
+          <img src="assets/img/n2.webp" alt="mujeres comiendo pizza" />
+          <img src="assets/img/n3.webp" alt="plato con pasta" />
         </div>
       </div>
     </div>
@@ -220,11 +220,11 @@
       </div>
       <div class="imagenes-nosotros">
         <div class="imagen1">
-          <img data-src="assets/img/n4.webp" alt="mujer comiendo pizza" />
+          <img src="assets/img/n4.webp" alt="mujer comiendo pizza" />
         </div>
         <div class="imagenes2">
-          <img data-src="assets/img/n5.webp" alt="mujeres comiendo pizza" />
-          <img data-src="assets/img/n6.webp" alt="plato con pasta" />
+          <img src="assets/img/n5.webp" alt="mujeres comiendo pizza" />
+          <img src="assets/img/n6.webp" alt="plato con pasta" />
         </div>
       </div>
     </div>
@@ -246,7 +246,7 @@
       </div>
       <div class="platillos">
         <div class="platillo" data-platillo="entrada">
-          <img data-src="assets/img/entrada1.webp" alt="entrada" />
+          <img src="assets/img/entrada1.webp" alt="entrada" />
           <h2>Bruschetta de tomate</h2>
           <p>Pan tostado cubierta de tomate y mozzarella de búfala fresca.</p>
           <div class="precio">
@@ -255,7 +255,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="entrada">
-          <img data-src="assets/img/entrada2.webp" alt="entrada" />
+          <img src="assets/img/entrada2.webp" alt="entrada" />
           <h2>Carpaccio de res</h2>
           <p>Láminas de carne de res marinadas en aceite de oliva y limón.</p>
           <div class="precio">
@@ -264,7 +264,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="entrada">
-          <img data-src="assets/img/entrada3.webp" alt="entrada" />
+          <img src="assets/img/entrada3.webp" alt="entrada" />
           <h2>Ceviche de langostinos</h2>
           <p>Mezcla de limón con langostinos frescos marinados.</p>
           <div class="precio">
@@ -273,7 +273,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="piqueo">
-          <img data-src="assets/img/piqueo1.webp" alt="piqueo" />
+          <img src="assets/img/piqueo1.webp" alt="piqueo" />
           <h2>Empanadas de carne</h2>
           <p>Empanadas rellenas de carne sazonada y jugosa.</p>
           <div class="precio">
@@ -282,7 +282,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="piqueo">
-          <img data-src="assets/img/piqueo2.webp" alt="piqueo" />
+          <img src="assets/img/piqueo2.webp" alt="piqueo" />
           <h2>Alitas de pollo</h2>
           <p>Alitas cubiertas con salsa barbacoa.</p>
           <div class="precio">
@@ -291,7 +291,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="piqueo">
-          <img data-src="assets/img/piqueo3.webp" alt="piqueo" />
+          <img src="assets/img/piqueo3.webp" alt="piqueo" />
           <h2>Pinchos de camarón</h2>
           <p>Camarones ensartados en brochetas a la parrilla.</p>
           <div class="precio">
@@ -300,7 +300,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="principal">
-          <img data-src="assets/img/principales1.webp" alt="principal" />
+          <img src="assets/img/principales1.webp" alt="principal" />
           <h2>Filete de ternera</h2>
           <p>Filete en salsa de vino acompañado con un pure de patatas.</p>
           <div class="precio">
@@ -309,7 +309,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="principal">
-          <img data-src="assets/img/principales2.webp" alt="principal" />
+          <img src="assets/img/principales2.webp" alt="principal" />
           <h2>Salmón a la parrilla</h2>
           <p>Salmón asado a la parrilla acompañado de espárragos.</p>
           <div class="precio">
@@ -318,7 +318,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="principal">
-          <img data-src="assets/img/principales3.webp" alt="principal" />
+          <img src="assets/img/principales3.webp" alt="principal" />
           <h2>Risotto de champiñones</h2>
           <p>Risotto de arborio con champiñones silvestres salteados.</p>
           <div class="precio">
@@ -327,7 +327,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="postre">
-          <img data-src="assets/img/postre1.webp" alt="postre" />
+          <img src="assets/img/postre1.webp" alt="postre" />
           <h2>Tarta de chocolate</h2>
           <p>Tarta crujiente acompañado de una salsa de frambuesa.</p>
           <div class="precio">
@@ -336,7 +336,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="postre">
-          <img data-src="assets/img/postre2.webp" alt="postre" />
+          <img src="assets/img/postre2.webp" alt="postre" />
           <h2>Crème brûlée de vainilla</h2>
           <p>Crema de vainilla con una capa de caramelo crocante.</p>
           <div class="precio">
@@ -345,7 +345,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="postre">
-          <img data-src="assets/img/postre3.webp" alt="postre" />
+          <img src="assets/img/postre3.webp" alt="postre" />
           <h2>Profiteroles rellenos</h2>
           <p>Pastelillo relleno de crema pastelera y bañado en chocolate.</p>
           <div class="precio">
@@ -354,7 +354,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="refresco">
-          <img data-src="assets/img/refresco1.webp" alt="refresco" />
+          <img src="assets/img/refresco1.webp" alt="refresco" />
           <h2>Limonada frozen</h2>
           <p>Refrescante limón y granizada del hielo triturado.</p>
           <div class="precio">
@@ -363,7 +363,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="refresco">
-          <img data-src="assets/img/refresco2.webp" alt="refresco" />
+          <img src="assets/img/refresco2.webp" alt="refresco" />
           <h2>Té helado</h2>
           <p>Combina el aroma del té con la frescura del hielo.</p>
           <div class="precio">
@@ -372,7 +372,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="refresco">
-          <img data-src="assets/img/refresco3.webp" alt="refresco" />
+          <img src="assets/img/refresco3.webp" alt="refresco" />
           <h2>Limonada de fresa</h2>
           <p>Sabor refrescante del limón con la dulzura de las fresas.</p>
           <div class="precio">
@@ -381,7 +381,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="jugo">
-          <img data-src="assets/img/jugo1.webp" alt="jugo" />
+          <img src="assets/img/jugo1.webp" alt="jugo" />
           <h2>Jugo de mango</h2>
           <p>Sabor dulce y jugoso.</p>
           <div class="precio">
@@ -390,7 +390,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="jugo">
-          <img data-src="assets/img/jugo2.webp" alt="jugo" />
+          <img src="assets/img/jugo2.webp" alt="jugo" />
           <h2>Jugo de piña</h2>
           <p>Sabor ácido y dulce.</p>
           <div class="precio">
@@ -399,7 +399,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="jugo">
-          <img data-src="assets/img/jugo3.webp" alt="jugo" />
+          <img src="assets/img/jugo3.webp" alt="jugo" />
           <h2>Jugo de sandia</h2>
           <p>Sabor dulce y refrescante.</p>
           <div class="precio">
@@ -408,7 +408,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="vino">
-          <img data-src="assets/img/vino1.webp" alt="vino" />
+          <img src="assets/img/vino1.webp" alt="vino" />
           <h2>Cabernet Sauvignon</h2>
           <p>
             Vino tinto que se caracteriza por sus sabores a frutas negras
@@ -420,7 +420,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="vino">
-          <img data-src="assets/img/vino2.webp" alt="vino" />
+          <img src="assets/img/vino2.webp" alt="vino" />
           <h2>Chardonnay</h2>
           <p>
             Vino blanco de perfil aromático, que combina frutas como piña y
@@ -432,7 +432,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="vino">
-          <img data-src="assets/img/vino3.webp" alt="vino" />
+          <img src="assets/img/vino3.webp" alt="vino" />
           <h2>Rosado de Garnacha</h2>
           <p>Vino rosado de uva Garnacha ofrece sabores frescos y afrutados.</p>
           <div class="precio">
@@ -441,7 +441,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="coctel">
-          <img data-src="assets/img/coctel1.webp" alt="coctel" />
+          <img src="assets/img/coctel1.webp" alt="coctel" />
           <h2>Mojito</h2>
           <p>
             Combina ron blanco, azúcar, jugo de lima, hojas de menta fresca y
@@ -453,7 +453,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="coctel">
-          <img data-src="assets/img/coctel2.webp" alt="coctel" />
+          <img src="assets/img/coctel2.webp" alt="coctel" />
           <h2>Margarita</h2>
           <p>
             Cóctel con base de tequila, jugo de lima y triple sec (licor de
@@ -465,7 +465,7 @@
           </div>
         </div>
         <div class="platillo" data-platillo="coctel">
-          <img data-src="assets/img/coctel3.webp" alt="coctel" />
+          <img src="assets/img/coctel3.webp" alt="coctel" />
           <h2>Martini de manzana</h2>
           <p>
             Cóctel elegante que combina vodka, licor de manzana y jugo de limón.
@@ -605,31 +605,31 @@
       <h2>Galeria</h2>
       <div class="container-img">
         <div class="box-img">
-          <img data-src="assets/img/galeria1.webp" alt="ensalada" />
+          <img src="assets/img/galeria1.webp" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria2.webp" alt="ensalada" />
+          <img src="assets/img/galeria2.webp" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria3.webp" alt="ensalada" />
+          <img src="assets/img/galeria3.webp" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria4.webp" alt="ensalada" />
+          <img src="assets/img/galeria4.webp"  loading="lazy"  alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria5.webp" alt="ensalada" />
+          <img src="assets/img/galeria5.webp"  loading="lazy"  alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria6.webp" alt="ensalada" />
+          <img src="assets/img/galeria6.webp"  loading="lazy"  alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria7.webp" alt="ensalada" />
+          <img src="assets/img/galeria7.webp"  loading="lazy"  alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria8.webp" alt="ensalada" />
+          <img src="assets/img/galeria8.webp"  loading="lazy"  alt="ensalada" />
         </div>
         <div class="box-img">
-          <img data-src="assets/img/galeria9.webp" alt="ensalada" />
+          <img src="assets/img/galeria9.webp"  loading="lazy"  alt="ensalada" />
         </div>
       </div>
     </section>
