cambios en la carga de imagenes en galeria

--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&family=Bree+Serif&display=swap"
       rel="stylesheet"
     />
 
@@ -52,7 +46,8 @@
           <div class="hamburguesa"><span></span><span></span><span></span></div>
         </div>
       </div>
-      <br /><br /><br /><br />
+
+      <!-- Banner reserva - video -->
       <div class="contenido-header">
         <div class="contenedor-encabezado">
           <div class="texto-encabezado">
@@ -65,6 +60,8 @@
         </div>
       </div>
     </header>
+
+    <!-- Seccion bienvenida -->
     <div class="contenedor-nosotros contenedor">
       <div class="texto-nosotros">
         <p class="bienvenida">Bienvenido a!</p>
@@ -85,14 +82,13 @@
           <img src="assets/img/comida1.webp" alt="mujer comiendo pizza" />
         </div>
         <div class="imagenes2">
-          <img
-            src="assets/img/comida2.webp"
-            alt="mujeres comiendo pizza"
-          />
+          <img src="assets/img/comida2.webp" alt="mujeres comiendo pizza" />
           <img src="assets/img/comida3.webp" alt="plato con pasta" />
         </div>
       </div>
     </div>
+
+    <!-- Seccion te ofrecemos - cards -->
     <section class="menu contenedor">
       <h2 class="texto-platillos">Te ofrecemos</h2>
       <div class="platillossf">
@@ -126,6 +122,8 @@
       </div>
     </section>
     <br /><br />
+
+    <!-- Banner nuestros platillos  -->
     <div class="separador">
       <div class="contenido-separador contenedor">
         <h2>Tenemos la mejor variedad</h2>
@@ -133,6 +131,9 @@
         <a href="#platillos" class="btn btn-verde">Nuestros Platillos</a>
       </div>
     </div>
+
+    
+    <!-- Seccion visitanos -->
     <section class="chef contenedor">
       <h2>¡Visitanos!</h2>
       <div class="contenido-chef">
@@ -148,14 +149,13 @@
           <a href="#galeria" class="btn btn-verde">Nuestra Galería</a>
         </div>
         <div class="imagen-chef">
-          <img
-            src="./assets/img/visitanos.webp"
-            alt="fotografia del chef"
-          />
+          <img src="./assets/img/visitanos.webp" alt="fotografia del chef" />
         </div>
       </div>
     </section>
-    <br /><br /><br />
+    <br /><br />
+
+    <!-- Banner nuestros bebidas  -->
     <div class="separador-Be">
       <div class="contenido-separador contenedor">
         <h2>La mejores bebidas</h2>
@@ -194,7 +194,9 @@
         </div>
       </div>
     </div>
-    <br /><br /><br /><br />
+    <br /><br />
+
+    <!-- Mision - Vision -->
     <div class="contenedor-nosotros contenedor">
       <div class="texto-nosotros">
         <p class="bienvenida">Mision-Vision</p>
@@ -478,158 +480,36 @@
       </div>
     </section>
 
-    <!--Bebidas
-    <section class="menu contenedor">
-      <h2 class="texto-platillos">Bebidas</h2>
-      <div class="botones-platillos">
-        <button class="todos btn btn-verde">Todos</button>
-        <button class="refrescos btn btn-verde">Refrescos</button>
-        <button class="jugos btn btn-verde">Jugos</button>
-        <button class="vinos btn btn-verde">Vinos</button>
-        <button class="cocteles btn btn-verde">Cocteles</button>
-      </div>
-      <div class="platillos">
-        <div class="platillo" data-platillo="refresco">
-          <img data-src="assets/img/refresco1.webp" alt="refresco" />
-          <h2>Limonada frozen</h2>
-          <p>Refrescante limón y granizada del hielo triturado.</p>
-          <div class="precio">
-            <p>$15.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="refresco">
-          <img data-src="assets/img/refresco2.webp" alt="refresco" />
-          <h2>Té helado</h2>
-          <p>Combina el aroma del té con la frescura del hielo.</p>
-          <div class="precio">
-            <p>$15.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="refresco">
-          <img data-src="assets/img/refresco3.webp" alt="refresco" />
-          <h2>Limonada de fresa</h2>
-          <p>Sabor refrescante del limón con la dulzura de las fresas. </p>
-          <div class="precio">
-            <p>$15.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="jugo">
-          <img data-src="assets/img/jugo1.webp" alt="jugo" />
-          <h2>Jugo de mango</h2>
-          <p>Sabor dulce y jugoso.</p>
-          <div class="precio">
-            <p>$15.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="jugo">
-          <img data-src="assets/img/jugo2.webp" alt="jugo" />
-          <h2>Jugo de piña</h2>
-          <p>Sabor ácido y dulce.</p>
-          <div class="precio">
-            <p>$15.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="jugo">
-          <img data-src="assets/img/jugo3.webp" alt="jugo" />
-          <h2>Jugo de sandia</h2>
-          <p>Sabor dulce y refrescante.</p>
-          <div class="precio">
-            <p>$15.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="vino">
-          <img data-src="assets/img/vino1.webp" alt="vino" />
-          <h2>Cabernet Sauvignon</h2>
-          <p>Vino tinto que se caracteriza por sus sabores a frutas negras maduras</p>
-          <div class="precio">
-            <p>$25.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="vino">
-          <img data-src="assets/img/vino2.webp" alt="vino" />
-          <h2>Chardonnay</h2>
-          <p>Vino blanco de perfil aromático, que combina frutas como piña y mango.</p>
-          <div class="precio">
-            <p>$30.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="vino">
-          <img data-src="assets/img/vino3.webp" alt="vino" />
-          <h2>Rosado de Garnacha</h2>
-          <p>Vino rosado de uva Garnacha ofrece sabores frescos y afrutados.</p>
-          <div class="precio">
-            <p>$35.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="coctel">
-          <img data-src="assets/img/coctel1.webp" alt="coctel" />
-          <h2>Mojito</h2>
-          <p>Combina ron blanco, azúcar, jugo de lima, hojas de menta fresca y soda.</p>
-          <div class="precio">
-            <p>$20.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="coctel">
-          <img data-src="assets/img/coctel2.webp" alt="coctel" />
-          <h2>Margarita</h2>
-          <p>Cóctel con base de tequila, jugo de lima y triple sec (licor de naranja).</p>
-          <div class="precio">
-            <p>$25.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-        <div class="platillo" data-platillo="coctel">
-          <img data-src="assets/img/coctel3.webp" alt="coctel" />
-          <h2>Martini de manzana</h2>
-          <p>Cóctel elegante que combina vodka, licor de manzana y jugo de limón.</p>
-          <div class="precio">
-            <p>$20.0</p>
-            <button><i class="fas fa-shopping-basket"></i></button>
-          </div>
-        </div>
-      </div>
-    </section>-->
-
     <!--Galeria-->
     <section class="chef contenedor" id="galeria">
       <h2>Galeria</h2>
       <div class="container-img">
         <div class="box-img">
-          <img src="assets/img/galeria1.webp" alt="ensalada" />
+          <img src="assets/img/galeria1.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria2.webp" alt="ensalada" />
+          <img src="assets/img/galeria2.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria3.webp" alt="ensalada" />
+          <img src="assets/img/galeria3.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria4.webp"  loading="lazy"  alt="ensalada" />
+          <img src="assets/img/galeria4.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria5.webp"  loading="lazy"  alt="ensalada" />
+          <img src="assets/img/galeria5.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria6.webp"  loading="lazy"  alt="ensalada" />
+          <img src="assets/img/galeria6.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria7.webp"  loading="lazy"  alt="ensalada" />
+          <img src="assets/img/galeria7.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria8.webp"  loading="lazy"  alt="ensalada" />
+          <img src="assets/img/galeria8.webp" loading="lazy" alt="ensalada" />
         </div>
         <div class="box-img">
-          <img src="assets/img/galeria9.webp"  loading="lazy"  alt="ensalada" />
+          <img src="assets/img/galeria9.webp" loading="lazy" alt="ensalada" />
         </div>
       </div>
     </section>
@@ -652,27 +532,27 @@
       <form class="formulario" method="post">
         <div class="input-formulario">
           <label for="nombre">Nombres</label>
-          <input type="text" placeholder="Nombres" id="nombre" />
+          <input type="text" placeholder="Nombres" id="nombre-reserva" />
         </div>
         <div class="input-formulario">
           <label for="correo">Email</label>
-          <input type="email" placeholder="ejemplo@ejemplo.com" id="correo" />
+          <input type="email" placeholder="ejemplo@ejemplo.com" id="correo-reserva" />
         </div>
         <div class="input-formulario">
           <label for="telefono">Teléfono</label>
-          <input type="tel" placeholder="+31123410921" id="telefono" />
+          <input type="tel" placeholder="+31123410921" id="telefono-reserva" />
         </div>
         <div class="input-formulario">
           <label for="date">Fecha:</label>
-          <input type="date" id="date" name="date" required />
+          <input type="date" id="date-reserva" name="date" required />
         </div>
         <div class="input-formulario">
           <label for="time">Hora:</label>
-          <input type="time" id="time" name="time" required />
+          <input type="time" id="time-reserva" name="time" required />
         </div>
         <div class="input-formulario">
           <label for="guests">Número de Invitados:</label>
-          <input type="number" id="guests" name="guests" required />
+          <input type="number" id="guests-reserva" name="guests" required />
         </div>
         <div class="input-formulario">
           <label for="mensaje">Mensaje</label>
@@ -709,19 +589,19 @@
       <form class="formulario" method="post">
         <div class="input-formulario">
           <label for="nombre">Nombres</label>
-          <input type="text" placeholder="Nombres" id="nombre" />
+          <input type="text" placeholder="Nombres" id="nombre-contacto" />
         </div>
         <div class="input-formulario">
           <label for="apellidos">Apellidos</label>
-          <input type="text" placeholder="Apellidos" id="apellidos" />
+          <input type="text" placeholder="Apellidos" id="apellidos-contacto" />
         </div>
         <div class="input-formulario">
           <label for="correo">Correo</label>
-          <input type="email" placeholder="ejemplo@ejemplo.com" id="correo" />
+          <input type="email" placeholder="ejemplo@ejemplo.com" id="correo-contacto" />
         </div>
         <div class="input-formulario">
           <label for="telefono">Teléfono</label>
-          <input type="tel" placeholder="+31123410921" id="telefono" />
+          <input type="tel" placeholder="+31123410921" id="telefono-contacto" />
         </div>
         <div class="input-formulario">
           <label for="mensaje">Mensaje</label>
