cambio de color del boton de rojo a verde en la seccion de "Sobre Nosotros"

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           ¡Esperamos que tengan una experiencia culinaria maravillosa con
           nosotros!"
         </p>
-        <a href="#sobrenosotros" class="btn btn-rojo">Sobre Nosostros</a>
+        <a href="#sobrenosotros" class="btn btn-verde">Sobre Nosostros</a>
       </div>
       <div class="imagenes-nosotros">
         <div class="imagen1">
