Change 'Sobre Nosotros' link text to 'Nosotros'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <nav class="navegacion ocultar">
             <a href="#inicio">Inicio</a>
-            <a href="#sobrenosotros">Sobre Nosotros</a>
+            <a href="#sobrenosotros">Nosotros</a>
             <a href="#platillos">Platillos</a>
             <a href="#platillos">Bebidas</a>
             <a href="#galeria">Galería</a>
