--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
       </div>
     </div>
     <footer class="footer">
-      <p>Todos los derechos reservados &copy; 2023 Sabores Mágicos</p>
+      <p>Todos los derechos reservados &copy; Sabores Mágicos</p>
     </footer>
     <script src="js/app.js"></script>
   </body>
