eliminacion de archivos css, cambios en app.js y index.html

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <!-- Seccion te ofrecemos - cards -->
     <section class="menu contenedor">
       <h2 class="texto-platillos">Te ofrecemos</h2>
-      <div class="platillossf">
-        <div class="platillosf" data-platillo="#">
+      <div class="platillosf">
+        <div class="platillof" data-platillo="#">
           <img src="assets/img/entrada.webp" alt="entrada" />
           <h2>Entradas</h2>
           <p>Contamos con las mejores entradas.</p>
@@ -101,7 +101,7 @@
             <button><i class="fas fa-shopping-basket"></i></button>
           </div>
         </div>
-        <div class="platillosf" data-platillo="#">
+        <div class="platillof" data-platillo="#">
           <img src="assets/img/principal.webp" alt="principal" />
           <h2>Platos principales</h2>
           <p>Los mejores platos con guarniciones.</p>
@@ -110,7 +110,7 @@
             <button><i class="fas fa-shopping-basket"></i></button>
           </div>
         </div>
-        <div class="platillosf" data-platillo="#">
+        <div class="platillof" data-platillo="#">
           <img src="assets/img/pb.webp" alt="pb" />
           <h2>Bebidas-Postres</h2>
           <p>Variedad en postres y bebidas</p>
