Change title from 'Sabores Magicos' to 'SABORES MAGICOS'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sabores Magicos</title>
+    <title>SABORES MAGICOS</title>
     <script
       src="https://kit.fontawesome.com/283335a286.js"
       crossorigin="anonymous"
